--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a class="nav-link" aria-current="page" href="./pages/contacto.html">CONTACTO</a>
                         </li>
                         <li>
-                            <a class="nav-link" aria-current="page" href="./pages/productos.html">PRODUCTOS</a>
+                            <a class="nav-link" aria-current="page" href="./pages/productos.html">MARCAS</a>
                         </li>
                     </ul>
                 </div>
@@ -57,7 +57,7 @@
     <section>
         <article class="animate__animated animate__backInLeft">
             <div>
-                <h1 class="fira-sans-light-italic">ENCONTRÁ LOS REPUESTOS Y ACCESORIOS CON LA MEJOR CALIDAD Y PRECIO
+                <h1 class="fira">ENCONTRÁ LOS REPUESTOS Y ACCESORIOS CON LA MEJOR CALIDAD Y PRECIO
                 </h1>
             </div>
             <div>
