--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -45,18 +45,18 @@
                             <a class="nav-link" aria-current="page" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li>
-                            <a class="nav-link" aria-current="page" href="./productos.html">PRODUCTOS</a>
+                            <a class="nav-link" aria-current="page" href="./productos.html">MARCAS</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <section class="animate__animated animate__backInDown">
-        <div class="boxSize">
+    <section class="animate__animated animate__backInDown boxSize">
+        <div>
             <h7>QUIENES SOMOS</h7>
         </div>
-        <div>
+        <div >
             <h4 class="poppins text">
                 DICAR es una empresa familiar dedicada a la distribución de repuestos de moto, con más de 6 años en el rubro, en pleno crecimiento y expansión
             </h4>
