--- a/pages/productos.html
+++ b/pages/productos.html
@@ -38,21 +38,26 @@
                             <a class="nav-link" aria-current="page" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li>
-                            <a class="nav-link active" aria-current="page" href="./productos.html">PRODUCTOS</a>
+                            <a class="nav-link active" aria-current="page" href="./productos.html">MARCAS</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <section class="animate__animated animate__backInDown">
-        <div class="boxSize">
-            <h7>PRODUCTOS</h7>
+    <section class="animate__animated animate__backInDown boxSize">
+        <div>
+            <h7>NUESTRAS MARCAS</h7>
+        </div>
+        <div style="margin-top: 7vh;">
+            <img src="../img/marcas/BHI.png" style="height: 8vh; width: auto; margin: 5vh;" alt="BHI">
+            <img src="../img/marcas/cilbrake.png" style="height: 8vh; width: auto;margin: 5vh;" alt="cilbrake">
+            <img src="../img/marcas/ckm.png" style="height: 8vh; width: auto;margin: 5vh;" alt="ckm">
+            
         </div>
         <div>
-            <h4>
-                ******* tipo de repuestos / fotos ******
-            </h4>
+            <img src="../img/marcas/sdg.png" style="height: 8vh; width: auto;margin: 5vh;" alt="sdg">
+            <img src="../img/marcas/tsh.png" style="height: 8vh; width: auto;margin: 5vh;" alt="tsh">
         </div>
     </section>
     
