--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -66,7 +66,7 @@
                     <div>                    
                         <div class="contactMargin">
                             <a class="contactBox" href="https://api.whatsapp.com/send/?phone=%2B5491131068512&text&type=phone_number&app_absent=0">
-                                <img src="../img/contact/WP.png" class="iconWP" alt="telefono">Whatsapp 
+                                <img src="../img/contact/wp.png" class="iconWP" alt="telefono">Whatsapp 
                                 <span class="fbLabel">+549 11 3106-8512</span>
                             </a>                        
                         </div>
