--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,9 +55,9 @@
     </header>
     <section class="animate__animated animate__backInDown">
         <div class="boxSize">
-            <h7>CONTACTO</h7>
+            <h7 class="mobileCenter">CONTACTO</h7>
 
-            <h4 class="poppins text" style="width: 100vh;">
+            <h4 class="poppins text">
                 Dejanos tu mensaje y nos pondremos en contacto a la brevedad
             </h4>
         
@@ -75,8 +75,7 @@
                                 <img src="../img/contact/fb2.png" class="iconWP" alt="facebook">Facebook 
                                 <span class="fbLabel">Dicar Motopartes</span>
                             </a>                        
-                        </div>
-                                            
+                        </div>                                            
                     </div>
                     <div>
                         <div class="contactMargin">
