--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -53,7 +53,7 @@
         </nav>
     </header>
     <section class="animate__animated animate__backInDown boxSize">
-        <div>
+        <div class="mobileCenter">
             <h7>QUIENES SOMOS</h7>
         </div>
         <div >
