--- a/pages/productos.html
+++ b/pages/productos.html
@@ -47,7 +47,7 @@
     </header>
     <section class="animate__animated animate__backInDown boxSize">
         <div>
-            <h7>NUESTRAS MARCAS</h7>
+            <h7 class="mobileCenter">NUESTRAS MARCAS</h7>
         </div>
         <div style="margin-top: 7vh;">
             <img src="../img/marcas/BHI.png" style="height: 8vh; width: auto; margin: 5vh;" alt="BHI">
