--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -53,7 +53,7 @@
     </header>
     <section class="animate__animated animate__backInDown">
         <div class="boxSize">
-            <h7>UBICACION</h7>
+            <h7 class="mobileCenter">UBICACION</h7>
         
             <div>
                 <h4 class="poppins text">
