--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,13 +49,13 @@
         <div>
             <h7 class="mobileCenter">NUESTRAS MARCAS</h7>
         </div>
-        <div style="margin-top: 7vh;">
+        <div style="margin-top: 7vh;" class="columnCenter">
             <img src="../img/marcas/BHI.png" style="height: 8vh; width: auto; margin: 5vh;" alt="BHI">
             <img src="../img/marcas/cilbrake.png" style="height: 8vh; width: auto;margin: 5vh;" alt="cilbrake">
             <img src="../img/marcas/ckm.png" style="height: 8vh; width: auto;margin: 5vh;" alt="ckm">
             
         </div>
-        <div>
+        <div class="columnCenter">
             <img src="../img/marcas/sdg.png" style="height: 8vh; width: auto;margin: 5vh;" alt="sdg">
             <img src="../img/marcas/tsh.png" style="height: 8vh; width: auto;margin: 5vh;" alt="tsh">
         </div>
