--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -57,6 +57,9 @@
             <h4 class="poppins text">
                 DICAR es una empresa familiar dedicada a la distribución de repuestos de moto, con más de 6 años en el rubro, en pleno crecimiento y expansión
             </h4>
+            <h4 class="poppins text"> 
+                Contamos con amplia variedad de repuestos para el motor, cubiertas y cámaras, lámparas, accesorios y mucho más
+            </h4>
         </div>
     </section>
     
