--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DICAR MOTOS</title>
+    <title>Dicar | Home</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
