--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,6 @@
         
                 
                 <article class="articleContact">
-                    <div>                    
                         <div class="contactMargin">
                             <a class="contactBox" href="https://api.whatsapp.com/send/?phone=%2B5491131068512&text&type=phone_number&app_absent=0">
                                 <img src="../img/contact/wp.png" class="iconWP" alt="telefono">Whatsapp 
@@ -73,8 +72,6 @@
                                 <span class="fbLabel">Dicar Motopartes</span>
                             </a>                        
                         </div>                                            
-                    </div>
-                    <div>
                         <div class="contactMargin">
                             <a class="contactBox" href="mailto:distribuidoradicar@outlook.com">
                                 <img src="../img/contact/mail.png" class="iconWP" alt="facebook">
@@ -88,10 +85,12 @@
                                 <span class="fbLabel">Dicar Motopartes</span>
                             </a>                        
                         </div>
-                    </div>
                 </article>
         </div>
     </section>
+    <footer class="footer">
+        <p>© 2025 F3FG. Todos los derechos reservados.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous">
