--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -62,6 +62,9 @@
             </h4>
         </div>
     </section>
+    <footer class="footer">
+        <p>© 2025 F3FG. Todos los derechos reservados.</p>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
