--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -53,7 +53,7 @@
             <h7 class="mobileCenter">UBICACION</h7>
         
             <div>
-                <h4 class="poppins text">
+                <h4 class="poppins text widthubi">
                     Estamos situados en la localidad de Villa Bosch, dentro del Partido de Tres de Febrero
                 </h4>
             </div>
@@ -61,6 +61,9 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.8551450345562!2d-58.588811724885815!3d-34.58253165637848!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb9bb734e4bf9%3A0x218003dd648b5e33!2sBetharram%201342%2C%20B1682%20Villa%20Bosch%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1738070895173!5m2!1ses-419!2sar" width="350" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </div>
         </div>
     </section>
+    <footer class="footer">
+        <p>© 2025 F3FG. Todos los derechos reservados.</p>
+    </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
