--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div>
                 <h3 class="poppins">
-                    Comprá desde cualquier punto de la Argentina
+                    Comprá desde cualquier punto de Argentina
                 </h3>
             </div>
             <div>
