--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,7 +82,7 @@
                             </a>
                         </div>
                         <div class="contactMargin">
-                            <a class="contactBox" href="https://www.facebook.com/people/Dicar-Motopartes/pfbid07Jx9jV9tEf12o7gnAafmk4t4Ge8kS6xBmF32MTS7WKimFdC9Cfi4ASsirfDjq9Ssl/?mibextid=ZbWKwL" >
+                            <a class="contactBox" href="https://www.instagram.com/dicarmotopartes/" >
                                 <img src="../img/contact/IG.png" class="iconWP" alt="instagram">Instagram 
                                 <span class="fbLabel">Dicar Motopartes</span>
                             </a>                        
